CheckBox,RadioButton: Extend focus line to cover an icon too

This is consistent with Fusion and MS Window 9x styles.

BUG: 467824
(cherry picked from commit e5f913a2f0c01f2002a7ec0cc01b061a205a8d7c)